# tauri_ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  product.md
.claude/: settings.local.json
macos_swiftui/: Package.swift
macos_swiftui/.dmg_stage/AIHubApp.app/Contents/: Info.plist
macos_swiftui/AIHubApp/: Info.plist
macos_swiftui/AIHubApp.app/Contents/MacOS/: AIHubApp
macos_swiftui/AIHubApp.app/Contents/Resources/: site-config.json
macos_swiftui/AIHubApp.xcodeproj/: project.pbxproj
macos_swiftui/AIHubApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macos_swiftui/AIHubApp.xcodeproj/xcshareddata/xcschemes/: AIHubApp.xcscheme
macos_swiftui/Sources/AIHubApp/: AIHubApp.swift  AppModel.swift  ConversationStore.swift  I18n.swift  LogoStore.swift  Models.swift  Storage.swift  WebViewManager.swift
macos_swiftui/Sources/AIHubApp/Views/: AddSiteView.swift  ContentView.swift  HistoryView.swift  HomeView.swift  IconPickerView.swift  MarkdownPreviewView.swift  ProjectContextView.swift  SavedConversationView.swift  SettingsView.swift  SidebarView.swift  SiteSettingsView.swift  SummaryView.swift  TopBarView.swift  (+2 more)
tauri-app/: index.html  package.json  pnpm-lock.yaml
tauri-app/src/: App.vue  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  remote-extract.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: HomePage.vue  IconPicker.vue  Sidebar.vue  TopBar.vue
tauri-app/src/composables/: useIcons.ts
tauri-app/src/i18n/: index.ts
(+7 files in other folders)
